# rentavid-api

./: Dockerfile  Makefile  README.md  pyproject.toml
rentavid/: dependencies.py  main.py
rentavid/models/: actor.py  category.py  film.py  language.py
rentavid/routers/: actors.py  categories.py  films.py  languages.py
