[tool.poetry]
name = "rentavid"
version = "0.1.0"
description = ""
authors = ["Abigail Ranson <abby@abbyranson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.32"
pydantic = "^2.8.2"
fastapi = {extras = ["all"], version = "^0.112.2"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
